--- a/index.html
+++ b/index.html
@@ -1258,7 +1258,7 @@
                 <p class="product-price">Best eSports Event Nominee</p>
             </div>
         </div>
-
     </div>
+    <div class="rectangle">Copyright © The Game Awards | Website Created by Brent Alfaro</div>
 </body>
 </html>
